--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@mui/material": "^5.14.11",
+    "@mui/styled-engine-sc": "^5.14.11",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^15.0.0",
@@ -20,7 +22,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^5.7.0",
-    "mongoose": "^6.1.9"
+    "mongoose": "^6.1.9",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
